kubectl/deployments/gvisor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-gvisor
spec:
  runtimeClassName: gvisor
  containers:
  - name: secure-ngix
    image: nginx
