kubectl/deployments/test_dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  labels:
    run: dns
spec:
  containers:
  - name: dnsutils
    image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
