kubectl/deployments/demo1_linkerd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo
  name: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: demo
    spec:
      containers:
      - image: nginx:1.14.2
        name: demo
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  selector:
    app: demo
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: ClusterIP
---
