kubectl/deployments/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  labels:
    app: prometheus
    purpose: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prometheus
      purpose: test
  template:
    metadata:
      labels: prometheus
      purpose: test
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.23.0
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus
          ports:
            - containerPort: 9090
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-cm
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector:
    app: prometheus
    purpose: test
  ports:
  - name: prometheus-ui
    protocol: TCP
    port: 9090
    targetPort: 9090
