kubectl/deployments/pg_istio_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: postgres-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway 
  servers:
  - hosts:
    - '*'
    port:
      number: 5432
      name: tcp-postgres
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - postgres-gateway
  hosts:
  - '*'
  tcp:
  - match:
    - port: 5432
    route:
    - destination:
        host: pg-instance-1.default.svc.cluster.local
        port:
          number: 5432
