kubectl/deployments/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: "/prometheus(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s 
            port:
              number: 9090
      - path: "/alertmanager(/|$)(.*)"
        pathType: Prefix
        backend:
          service:
            name: alertmanager-main 
            port:
              number: 9093
